--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
                 <configuration>
                     <systemPropertyVariables>
                         <DISPLAY>${xvfb.display}</DISPLAY>
+                        <webdriver.firefox.bin>${bamboo_capability_firefox_38_0}</webdriver.firefox.bin>
                     </systemPropertyVariables>
                     <includes>
                         <include>**/*IntegrationTest.java</include>
