--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,8 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
                     <systemPropertyVariables>
-                        <DISPLAY>:20</DISPLAY>
-                        <webdriver.firefox.bin>${bamboo_capability_firefox_38_0}/firefox</webdriver.firefox.bin>
+                        <DISPLAY>${xvfb.display}</DISPLAY>
+                        <webdriver.firefox.bin>${bamboo_capability_firefox_17_0}/firefox</webdriver.firefox.bin>
                     </systemPropertyVariables>
                     <includes>
                         <include>**/*IntegrationTest.java</include>
