--- a/pom.xml
+++ b/pom.xml
@@ -30,21 +30,25 @@
             <groupId>org.bytedeco</groupId>
             <artifactId>javacv</artifactId>
             <version>1.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>javacpp</artifactId>
             <version>1.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.bytedeco.javacpp-presets</groupId>
             <artifactId>opencv</artifactId>
             <version>3.1.0-1.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.bytedeco.javacpp-presets</groupId>
             <artifactId>ffmpeg</artifactId>
             <version>3.1.2-1.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
