--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,13 @@
             <!--<version>1.2</version>-->
             <!--<scope>test</scope>-->
         <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.bytedeco.javacpp-presets</groupId>-->
-            <!--<artifactId>opencv</artifactId>-->
-            <!--<version>3.1.0-1.2</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>opencv</artifactId>
+            <version>3.1.0-1.2</version>
+            <classifier>linux-x86_64</classifier>
+            <scope>test</scope>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.bytedeco.javacpp-presets</groupId>-->
             <!--<artifactId>ffmpeg</artifactId>-->
