--- a/pom.xml
+++ b/pom.xml
@@ -36,20 +36,13 @@
             <groupId>org.bytedeco</groupId>
             <artifactId>javacpp</artifactId>
             <version>1.2</version>
-            <classifier>linux-x86_64</classifier>
         </dependency>
         <dependency>
             <groupId>org.bytedeco.javacpp-presets</groupId>
-            <artifactId>opencv</artifactId>
-            <version>3.1.0-1.2</version>
+            <artifactId>ffmpeg</artifactId>
+            <version>3.1.2-1.2</version>
             <classifier>linux-x86_64</classifier>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.bytedeco.javacpp-presets</groupId>-->
-            <!--<artifactId>ffmpeg</artifactId>-->
-            <!--<version>3.1.2-1.2</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
     </dependencies>
 
     <build>
