--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
             <artifactId>ffmpeg</artifactId>
             <version>3.1.2-1.2</version>
             <classifier>linux-x86_64</classifier>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
