--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacpp</artifactId>
+            <version>1.2.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.bytedeco.javacpp-presets</groupId>
             <artifactId>ffmpeg</artifactId>
             <version>3.0.2-1.2</version>
@@ -59,7 +65,6 @@
                     <systemPropertyVariables>
                         <DISPLAY>${xvfb.display}</DISPLAY>
                         <webdriver.firefox.bin>${bamboo_capability_firefox_45}/firefox</webdriver.firefox.bin>
-                        <javacpp.platform>linux-x86_64</javacpp.platform>
                     </systemPropertyVariables>
                     <includes>
                         <include>**/*IntegrationTest.java</include>
